<resources>
    <string name="app_name">GuessWhoUR</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hamza Ikine</string>
    <string name="nav_header_subtitle">hamzaikine@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">update</string>
    <string name="emotion">Emotion</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="delete">delete</string>
</resources>
