<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:focusable="true"
    android:clickable="true"
    >


    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_row_background">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="@dimen/ic_delete"
            android:layout_height="@dimen/ic_delete"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:src="@android:drawable/ic_menu_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toLeftOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_foreground"
        android:background="@android:color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/person_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/person_emotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/person_photo"
            android:text="@string/emotion"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/person_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_toRightOf="@+id/person_photo"
            android:layout_below="@+id/person_emotion"
            />

        <TextView
            android:id="@+id/person_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_below="@+id/person_age"
            android:layout_toRightOf="@+id/person_photo"
            />

        <TextView
            android:id="@+id/date_id"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_gender"
            android:layout_toRightOf="@id/person_photo"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>